feat: adding clock

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
+    <link rel="shortcut icon" href="%PUBLIC_URL%/icons/winterly32x32.png" />
     <title>New Tab</title>
     <style>
       body {
